# bug_crush

./: README.md  bug_crush.cabal
app/: Main.hs
src/: Render.hs  Types.hs  UI.hs
